--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Sardinia (Italy) -- Description and travel'
 - !lcsh 'Corsica (France) -- Description and travel'
 - !lcc 'DC'
+- GITenberg
 title: 'Rambles in the Islands of Corsica and Sardinia
 
   with Notices of their History, Antiquities, and Present Condition.'
